label wrapping issue in IE7
SVN-Revision: 4277

--- a/projects/web/src/main/webapp/css/ie.css
+++ b/projects/web/src/main/webapp/css/ie.css
@@ -13,3 +13,7 @@ body {
 	/* Fix the issue of summary not aligned properly */
 	clear:both;
 }
+
+div.row {
+    clear:both;
+}
